--- a/index/index.html
+++ b/index/index.html
@@ -10,6 +10,7 @@
     </style>
 </head>
 <body>
+    <div><a href="https://github.com/zeroHu/javascript-common-components">js插件项目地址</a></div>
     <nav>
         <ul>
             <li>
