--- a/dialog/dialog.html
+++ b/dialog/dialog.html
@@ -24,12 +24,18 @@
         background: #ff9090;
         color:#fff;
     }
+    a {
+        text-decoration: none;
+        font-size: 16px;
+        color:#ff8080;
+    }
     </style>
 </head>
 
 <body>
     <div class="container">
         <h2>这是dialog 插件页面</h2>
+        <div><a href="https://github.com/zeroHu/javascript-common-components">js插件项目地址</a></div>
         <h3>先行体验</h3>
         <div class="clickfun">(1)点击确认或者取消反馈:<span></span></div>
         <button class="red" onclick="dialogone()">调用jquery dialog1</button>
