--- a/index/index.html
+++ b/index/index.html
@@ -1,24 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>这是zero的主页</title>
     <style>
-        ul {
-            list-style: none;
+    ul {
+        list-style: none;
+    }
+
+    .text {
+        font-size: 64px;
+        font-weight: bold;
+        text-transform: uppercase;
+        fill: none;
+        stroke-width: 2px;
+        stroke-dasharray: 90 310;
+        animation: stroke 6s infinite linear;
+    }
+
+    .text-1 {
+        stroke: #3498db;
+        text-shadow: 0 0 5px #3498db;
+        animation-delay: -1.5s;
+    }
+
+    .text-2 {
+        stroke: #f39c12;
+        text-shadow: 0 0 5px #f39c12;
+        animation-delay: -3s;
+    }
+
+    .text-3 {
+        stroke: #e74c3c;
+        text-shadow: 0 0 5px #e74c3c;
+        animation-delay: -4.5s;
+    }
+
+    .text-4 {
+        stroke: #9b59b6;
+        text-shadow: 0 0 5px #9b59b6;
+        animation-delay: -6s;
+    }
+
+    @keyframes stroke {
+        100% {
+            stroke-dashoffset: -400;
         }
+    }
     </style>
 </head>
+
 <body>
+    <svg width="100%" height="100">
+        <text text-anchor="middle" x="50%" y="50%" class="text text-1">
+            ZERO'S WEBSITE
+        </text>
+        <text text-anchor="middle" x="50%" y="50%" class="text text-2">
+            ZERO'S WEBSITE
+        </text>
+        <text text-anchor="middle" x="50%" y="50%" class="text text-3">
+            ZERO'S WEBSITE
+        </text>
+        <text text-anchor="middle" x="50%" y="50%" class="text text-4">
+            ZERO'S WEBSITE
+        </text>
+    </svg>
     <nav>
         <ul>
             <li>
                 <a href="../dialog/dialog.html">dialog 弹窗体验页面</a>
             </li>
             <li>
-                <a href="../pagePlugin/pagePlugin.html">pagePlugin 插件体验页面</a>
+                <a href="../pagination/pagination.html">pagePlugin 插件体验页面</a>
             </li>
         </ul>
     </nav>
 </body>
+
 </html>
