--- a/index/index.html
+++ b/index/index.html
@@ -85,6 +85,14 @@
         width:900px;
         margin:auto;
     }
+    .a-green {
+        border-color:#1ca9fa;
+        color:#1ca9fa;
+    }
+    .a-blue {
+        border-color:#31fd6f;
+        color:#31fd6f;
+    }
     </style>
 </head>
 
@@ -106,9 +114,9 @@
         </svg>
     </header>
     <nav class="navtion">
-        <a href="http://vue.zeroyh.cn" class="tui-item">VUE</a>
-        <a href="http://vue.zeroyh.cn" class="tui-item">NODE</a>
-        <a href="http://vue.zeroyh.cn" class="tui-item">BLOG</a>
+        <a href="http://vue.zeroyh.cn" class="tui-item color-red">VUE</a>
+        <a href="http://node.zeroyh.cn" class="tui-item a-green">NODE</a>
+        <a href="http://blog.zeroyh.cn" class="tui-item a-blue">BLOG</a>
     </nav>
     <div class="content-box">
         <h4>本站内容简介</h4>
