--- a/index/index.html
+++ b/index/index.html
@@ -136,6 +136,11 @@
         padding:6px 10px;
         margin:0 30px 30px 30px;
     }
+    .ban-list ul li a {
+        display: inline-block;
+        width: 200px;
+        box-sizing: border-box;
+    }
     .ban-list ul li:hover {
         background: red;
         color: blue;
