--- a/index/index.html
+++ b/index/index.html
@@ -70,6 +70,14 @@
         color: #fb0e1c;
         line-height: 100px;
         border: 1px solid #fb0e1c;
+        font-size: 18px;
+    }
+
+    .tui-item:hover {
+        width: 104px;
+        height: 104px;
+        line-height: 104px;
+        font-size: 26px;
     }
 
     .navtion {
@@ -94,7 +102,9 @@
         border-color: #31fd6f;
         color: #31fd6f;
     }
-
+    header {
+        margin-top: 100px;
+    }
     h4 {
         width: 150px;
         margin: auto;
@@ -146,6 +156,16 @@
         color: blue;
         box-shadow: 2px 0 5px #fff;
     }
+    p {
+        text-align: center;
+    }
+    .footer {
+        margin-top: 100px;
+    }
+    .git-add {
+        font-size: 12px;
+        margin-bottom: 20px;
+    }
     </style>
 </head>
 
@@ -193,9 +213,15 @@
                 <li>
                     <a href="../needLearn/needLearn.html">学习列表</a>
                 </li>
+                <li>
+                    <a href="../needLearn/needBook.html">待读书籍</a>
+                </li>
             </ul>
         </div>
     </div>
+    <footer>
+        <p class="git-add"><a href="https://github.com/zeroHu">https://github.com/zeroHu</a></p>
+    </footer>
 </body>
 
 </html>
