--- a/needLearn/needLearn.html
+++ b/needLearn/needLearn.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>需要学习的目录</title>
+    <title>需要学习知识点的目录</title>
     <style>
         ul {
             list-style: none;
@@ -23,6 +23,7 @@
         }
         h4 {
             text-align: center;
+            font-size: 20px;
         }
         .hasdone {
             position: relative;
