--- a/needLearn/needLearn.html
+++ b/needLearn/needLearn.html
@@ -21,13 +21,17 @@
             margin-top: 20px;
             cursor: initial;
         }
+        li a {
+            display: inline-block;
+            width: 100%;
+        }
         h4 {
             text-align: center;
             font-size: 20px;
         }
         .hasdone {
             position: relative;
-            background: #ccc;
+            background: #08c;
             cursor: pointer;
 
         }
@@ -41,7 +45,7 @@
             width: 62px;
             height:62px;
             position: absolute;
-            background: #999;
+            background: orange;
             top: 0;
             right: 0;
             cursor:initial;
@@ -52,17 +56,18 @@
             text-align: center;
             color:#eeeeee;
         }
+        a {color:#fff;text-decoration: none;}
     </style>
 </head>
 <body>
     <div class="content-box">
         <h4>需要学习的目录</h4>
         <ul>
-            <li class="">
-                1.css盒子模型
+            <li class="hasdone">
+                <a href="./css-box.html">1.css盒子模型</a>
             </li>
-            <li>
-                2.box-sizing
+            <li class="hasdone">
+                <a href="./box-sizing.html">2.box-sizing</a>
             </li>
             <li>
                 3.弹性flex布局
