--- a/dialog/dialog.html
+++ b/dialog/dialog.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>dialog</title>
+    <link rel="stylesheet" href="../blog-style.css">
     <link rel="stylesheet" href="dialog.css">
     <script src="../jquery.js"></script>
 </head>
 
 <body>
     <div class="container">
-        <h2>这是dialog 插件页面</h2>
+        <h3>这是dialog 插件页面</h3>
         <div><a href="https://github.com/zeroHu/javascript-common-components">js插件项目地址</a></div>
-        <h3>先行体验</h3>
+        <h4>先行体验</h4>
         <div class="clickfun">(1)点击确认或者取消反馈:<span></span></div>
         <button class="red" onclick="dialogone()">调用jquery dialog1</button>
         <button class="red" onclick="dialogtwo()">调用jquery dialog2</button>
@@ -83,7 +84,7 @@
             mask:false
         });
         </div>
-        <p>第4个调用dialog</p>
+        <p>第四个调用dialog</p>
         <!-- 第4个调用dialog -->
         <!-- <button onclick="dialogfour()">调用jquery dialog4</button> -->
         <div class="code">
