--- a/needLearn/css-box.html
+++ b/needLearn/css-box.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>css 盒模型</title>
-    <link rel="stylesheet" href="./blog-style.css">
+    <link rel="stylesheet" href="../blog-style.css">
 </head>
 <body>
     <div class="blog-box">
