--- a/index/index.html
+++ b/index/index.html
@@ -199,6 +199,9 @@
                     <a href="../dialog/dialog.html">dialog 弹窗体验页面</a>
                 </li>
                 <li>
+                    <a href="../nojsCheck/nojsCheck.html">无jsTab切换</a>
+                </li>
+                <li>
                     <a href="../pagination/pagination.html">pagePlugin 插件体验页面</a>
                 </li>
                 <li>
