--- a/index/index.html
+++ b/index/index.html
@@ -202,6 +202,9 @@
                     <a href="../nojsCheck/nojsCheck.html">无jsTab切换</a>
                 </li>
                 <li>
+                    <a href="../nojsCheck/radioBeauty.html">美化radio等</a>
+                </li>
+                <li>
                     <a href="../pagination/pagination.html">pagePlugin 插件体验页面</a>
                 </li>
                 <li>
