--- a/index/index.html
+++ b/index/index.html
@@ -196,7 +196,7 @@
             <h4>插件版块</h4>
             <ul>
                 <li>
-                    <a href="../dialog/dialog.html">dialog 弹窗体验页面</a>
+                    <a href="../dialog">dialog 弹窗体验页面</a>
                 </li>
                 <li>
                     <a href="../nojsCheck/nojsCheck.html">无jsTab切换</a>
@@ -205,7 +205,7 @@
                     <a href="../nojsCheck/radioBeauty.html">美化radio等</a>
                 </li>
                 <li>
-                    <a href="../pagination/pagination.html">pagePlugin 插件体验页面</a>
+                    <a href="../pagination">pagePlugin 插件体验页面</a>
                 </li>
                 <li>
                     <a href="./">待定插件</a>
