--- a/needLearn/needLearn.html
+++ b/needLearn/needLearn.html
@@ -82,9 +82,11 @@
             <li>
                 4.未知宽高元素怎么上下左右垂直居中
             </li>
-            <li>
-                5.原型链，对象，构造函数
-            </li>
+            <a href="./objectAndPrototype.html">
+                <li class="hasdone">
+                    5.原型链，对象，构造函数
+                </li>
+            </a>
             <li>
                 6.了解http2.0,websocket,https
             </li>
