--- a/needLearn/objectAndPrototype.html
+++ b/needLearn/objectAndPrototype.html
@@ -7,11 +7,10 @@
 </head>
 <body>
     <div class="blog-box">
+        <h3>__proto__ 和 prototype 和对象的继承关系</h3>
         <p class="head">tips</p>
         <p class="tips">这可以说是一篇记录，不是一片好文。如果想看这方面的好文推荐<br><a href="https://github.com/creeperyang/blog/issues/9" target="_blank">https://github.com/creeperyang/blog/issues/9</a><br><a href="https://github.com/mqyqingfeng/Blog/issues/2" target="_blank">https://github.com/mqyqingfeng/Blog/issues/2</a></p>
 
-
-        <h3> start </h3>
         <p class="head">__proto__ 和 prototype</p>
         <p class="code">
             引用JavaScript 权威指南里面的解释
