--- a/needLearn/needLearn.html
+++ b/needLearn/needLearn.html
@@ -103,7 +103,7 @@
                 10.什么是函数柯里化？以及说一下JS的API有哪些应用到了函数柯里化的实现？
             </li>
             <li>
-                11.ES6的箭头函数this问题，以及拓展运算符
+                11.ES5this,ES6的箭头函数this问题，以及拓展运算符
             </li>
             <li>
                 12.JS模块化Commonjs,UMD,CMD规范的了解，以及ES6的模块化跟其他几种的区别，以及出现的意义
@@ -114,6 +114,11 @@
             <li>
                 14.线性顺序存储结构和链式存储结构有什么区别？以及优缺点
             </li>
+            <a href="./javascript-queue.html">
+                <li class="hasdone">
+                    15.javascript queue,代码先后执行问题
+                </li>
+            </a>
         </ul>
         <p class="tips">tips:完成的学习模块我会加上over 并且给改版块加上一个学习过程记录链接</p>
     </div>
