add target and currenttarget

--- a/needLearn/needLearn.html
+++ b/needLearn/needLearn.html
@@ -93,9 +93,11 @@
             <li>
                 7.webpack的入口文件怎么配置,webpack性能
             </li>
-            <li>
-                8.DOM事件中target和currentTarget的区别
-            </li>
+            <a href="./target-currentTarget.html">
+                <li class="hasdone">
+                    8.DOM事件中target和currentTarget的区别
+                </li>
+            </a>
             <li>
                 9.深拷贝的实现原理
             </li>
