--- a/index/index.html
+++ b/index/index.html
@@ -4,6 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>这是zero的主页</title>
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?feeb972ffe69b037d0f9ed061853ed05";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
     <style>
     body {
         background: #151515;
@@ -90,7 +99,7 @@
 
     .content-box {
         width: 900px;
-        margin:80px auto 20px;
+        margin: 80px auto 20px;
     }
 
     .a-green {
@@ -102,17 +111,19 @@
         border-color: #31fd6f;
         color: #31fd6f;
     }
+
     header {
         margin-top: 100px;
     }
+
     h4 {
         width: 150px;
         margin: auto;
-        color:#ffeee8;
+        color: #ffeee8;
         font-size: 18px;
         text-align: center;
-        padding-bottom:4px;
-        border-bottom:2px solid red;
+        padding-bottom: 4px;
+        border-bottom: 2px solid red;
         text-shadow: 1px 0 #8B4513, 0 1px #8B4513, 0 -1px #8B4513, -1px 0 #8B4513;
         cursor: pointer;
     }
@@ -129,39 +140,46 @@
     }
 
     .ban-list {
-        margin-top:50px;
+        margin-top: 50px;
         display: block;
         overflow: hidden;
         clear: both;
     }
-    .ban-list ul{
-        margin:30px 0 0 50px;
+
+    .ban-list ul {
+        margin: 30px 0 0 50px;
     }
+
     .ban-list ul li {
-        float:left;
+        float: left;
         width: 200px;
-        border:1px solid #d8d6ca;
+        border: 1px solid #d8d6ca;
         border-radius: 6px;
         text-align: center;
-        padding:6px 10px;
-        margin:0 30px 30px 30px;
+        padding: 6px 10px;
+        margin: 0 30px 30px 30px;
     }
+
     .ban-list ul li a {
         display: inline-block;
         width: 200px;
         box-sizing: border-box;
     }
+
     .ban-list ul li:hover {
         background: red;
         color: blue;
         box-shadow: 2px 0 5px #fff;
     }
+
     p {
         text-align: center;
     }
+
     .footer {
         margin-top: 100px;
     }
+
     .git-add {
         font-size: 12px;
         margin-bottom: 20px;
@@ -212,7 +230,6 @@
                 </li>
             </ul>
         </div>
-
         <div class="lear-list ban-list">
             <h4>学习计划</h4>
             <ul>
