--- a/needLearn/object-prototype.html
+++ b/needLearn/object-prototype.html
@@ -9,7 +9,7 @@
     <div class="blog-box">
         <h3>__proto__ 和 prototype 和对象的继承关系</h3>
         <p class="head">tips</p>
-        <p class="tips">这可以说是一篇记录，不是一片好文。如果想看这方面的好文推荐<br><a href="https://github.com/creeperyang/blog/issues/9" target="_blank">https://github.com/creeperyang/blog/issues/9</a><br><a href="https://github.com/mqyqingfeng/Blog/issues/2" target="_blank">https://github.com/mqyqingfeng/Blog/issues/2</a></p>
+        <p class="tips">这可以说是一篇记录，不是一篇好文。如果想看这方面的好文推荐<br><a href="https://github.com/creeperyang/blog/issues/9" target="_blank">https://github.com/creeperyang/blog/issues/9</a><br><a href="https://github.com/mqyqingfeng/Blog/issues/2" target="_blank">https://github.com/mqyqingfeng/Blog/issues/2</a></p>
 
         <p class="head">__proto__ 和 prototype</p>
         <p class="code">
