--- a/needLearn/needLearn.html
+++ b/needLearn/needLearn.html
@@ -82,7 +82,7 @@
             <li>
                 4.未知宽高元素怎么上下左右垂直居中
             </li>
-            <a href="./objectAndPrototype.html">
+            <a href="./object-prototype.html">
                 <li class="hasdone">
                     5.原型链，对象，构造函数
                 </li>
@@ -104,9 +104,11 @@
             <li>
                 10.什么是函数柯里化？以及说一下JS的API有哪些应用到了函数柯里化的实现？
             </li>
-            <li>
-                11.ES5this,ES6的箭头函数this问题，以及拓展运算符
-            </li>
+            <a href="./es5this-es6this.html">
+                <li class="hasdone">
+                    11.ES5this,ES6的箭头函数this问题，以及拓展运算符
+                </li>
+            </a>
             <li>
                 12.JS模块化Commonjs,UMD,CMD规范的了解，以及ES6的模块化跟其他几种的区别，以及出现的意义
             </li>
