--- a/needLearn/needLearn.html
+++ b/needLearn/needLearn.html
@@ -38,7 +38,7 @@
             cursor: pointer;
 
         }
-        .hasdone::after {
+        /*.hasdone::after {
             display: block;
             box-sizing: border-box;
             content: "off";
@@ -52,7 +52,7 @@
             top: 0;
             right: 0;
             cursor:initial;
-        }
+        }*/
         .tips {
             margin: 50px 0;
             font-size: 12px;
@@ -101,9 +101,11 @@
             <li>
                 9.深拷贝的实现原理
             </li>
-            <li>
-                10.什么是函数柯里化？以及说一下JS的API有哪些应用到了函数柯里化的实现？
-            </li>
+            <a href="./currying-function.html">
+                <li class="hasdone">
+                    10.什么是函数柯里化？以及说一下JS的API有哪些应用到了函数柯里化的实现？
+                </li>
+            </a>
             <a href="./es5this-es6this.html">
                 <li class="hasdone">
                     11.ES5this,ES6的箭头函数this问题，以及拓展运算符
