--- a/needLearn/needLearn.html
+++ b/needLearn/needLearn.html
@@ -125,6 +125,11 @@
                     15.javascript queue,代码先后执行问题
                 </li>
             </a>
+            <a href="./function-escope.html">
+                <li class="hasdone">
+                    16.理解JavaScript执行上下文、函数堆栈、提升的概念
+                </li>
+            </a>
         </ul>
         <p class="tips">tips:完成的学习模块我会加上over 并且给改版块加上一个学习过程记录链接</p>
     </div>
