--- a/needLearn/needLearn.html
+++ b/needLearn/needLearn.html
@@ -79,9 +79,11 @@
             <li>
                 3.弹性flex布局
             </li>
-            <li>
-                4.未知宽高元素怎么上下左右垂直居中
-            </li>
+            <a href="./css-center.html">
+                <li class="hasdone">
+                    4.未知宽高元素怎么上下左右垂直居中
+                </li>
+            </a>
             <a href="./object-prototype.html">
                 <li class="hasdone">
                     5.原型链，对象，构造函数
