--- a/needLearn/needLearn.html
+++ b/needLearn/needLearn.html
@@ -116,9 +116,11 @@
             <li>
                 12.JS模块化Commonjs,UMD,CMD规范的了解，以及ES6的模块化跟其他几种的区别，以及出现的意义
             </li>
-            <li>
-                13.XSS是什么，攻击原理，怎么预防
-            </li>
+            <a href="./xss.html">
+                <li class="hasdone">
+                    13.XSS是什么，攻击原理，怎么预防
+                </li>
+            </a>
             <li>
                 14.线性顺序存储结构和链式存储结构有什么区别？以及优缺点
             </li>
