--- a/pagination/index.html
+++ b/pagination/index.html
@@ -37,6 +37,7 @@
 </head>
 
 <body>
+    <p>宁外一个翻页插件风装版本：http://luopq.com/2016/02/04/think-js-plugin/</p>
     <p>算法参照： http://f2e.souche.com/blog/ru-he-xie-ge-jian-dan-de-fen-ye/</p>
     <p>哎呀，自己写了个算法。。。像一团一样屡不清很烂。。。然后看别人的非常清晰。。。算法咋就这么弱呢。。。弱鸡</p>
     <!-- pagination -->
