add webpack and add a book name

--- a/needLearn/needBook.html
+++ b/needLearn/needBook.html
@@ -52,23 +52,32 @@
             text-align: center;
             color:#eeeeee;
         }
+        .item {
+            margin: 50px 0;
+            font-size: 18px;
+        }
     </style>
 </head>
 <body>
     <div class="content-box">
         <h4>需要学习的书籍</h4>
         <ul>
+            <div class="item">理科类书籍</div>
             <li class="">
-                1.css secret
+                1. css secret
             </li>
             <li>
-                2.javascript高级程序设计
+                2. javascript高级程序设计
             </li>
             <li>
-                3.你不知道的javascript
+                3. 你不知道的javascript
             </li>
             <li>
-                4.javascript权威指南
+                4. javascript权威指南
+            </li>
+            <div class="item">文科类书籍</div>
+            <li>
+                1. 西窗法语
             </li>
         </ul>
         <p class="tips">tips:完成的书籍我会标记为over，并且加上一个看书过程中的笔记链接(如果有的话)</p>
