add changeurl html

--- a/index/index.html
+++ b/index/index.html
@@ -226,6 +226,9 @@
                     <a href="../pagination">pagePlugin 插件体验页面</a>
                 </li>
                 <li>
+                    <a href="../needLearn/change-url.html">转换长连接短连接</a>
+                </li>
+                <li>
                     <a href="./">待定插件</a>
                 </li>
             </ul>
