--- a/index/index.html
+++ b/index/index.html
@@ -3,7 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>这是zero的主页</title>
+    <title>zero的主页</title>
+    <meta name="keywords" content="zero，zero主页，明天后浪主页，torrow主页，zero联系题，自己出题自己训练自己 ">
+    <meta name="description" content="zero是我的个人主页，是我个人的生活积累，用于记录一下我平时的工作和遇见的问题，主要是对我个人技术和生活的一种记录">
+    <meta charset="utf-8">
+    <meta content="webkit" name="renderer">
+    <meta content="user-scalable=no,width=device-width,initial-scale=1.0" name="viewport">
+    <meta content="zero" name="apple-mobile-web-app-title">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta content="pc,mobile" name="applicable-device">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="black" name="apple-mobile-web-app-status-bar-style">
+    <meta content="True" name="HandheldFriendly">
+    <meta content="320" name="MobileOptimized">
     <script>
     var _hmt = _hmt || [];
     (function() {
