--- a/needLearn/function-escope.html
+++ b/needLearn/function-escope.html
@@ -210,7 +210,7 @@
 
 
         <p class="head">原文链接</p>
-        <p class="yuan"><a href="http://localhost/main/needLearn/javascript-queue.html">宁外一篇关于代码执行的问题偏向ajax setTime promise等</a></p>
+        <p class="yuan"><a href="http://www.zeroyh.cn/main/needLearn/javascript-queue.html">宁外一篇关于代码执行的问题偏向ajax setTime promise等</a></p>
         <p class="yuan"><a href="https://segmentfault.com/a/1190000009041008">https://segmentfault.com/a/1190000009041008</a></p>
         <p class="yuan"><a href="https://github.com/mqyqingfeng/Blog/issues/8">https://github.com/mqyqingfeng/Blog/issues/8</a></p>
     </div>
