modify some text

--- a/index/index.html
+++ b/index/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>zero的主页</title>
-    <meta name="keywords" content="zero，zero主页，明天后浪主页，torrow主页，zero联系题，自己出题自己训练自己 ">
+    <meta name="keywords" content="zero个人网站，zero主页，zero个人主页，明天后浪主页，torrow主页">
     <meta name="description" content="zero是我的个人主页，是我个人的生活积累，用于记录一下我平时的工作和遇见的问题，主要是对我个人技术和生活的一种记录">
     <meta charset="utf-8">
     <meta content="webkit" name="renderer">
