--- a/needLearn/needLearn.html
+++ b/needLearn/needLearn.html
@@ -144,6 +144,12 @@
                     16.理解JavaScript执行上下文、函数堆栈、提升的概念
                 </li>
             </a>
+            <li>
+                17.JavaScript中的节流和防抖
+            </li>
+            <li>
+                18.闭包，闭包的作用
+            </li>
         </ul>
         <p class="tips">tips:完成的学习模块我会加上over 并且给改版块加上一个学习过程记录链接</p>
     </div>
