--- a/needLearn/needBook.html
+++ b/needLearn/needBook.html
@@ -75,9 +75,23 @@
             <li>
                 4. javascript权威指南
             </li>
+
             <div class="item">文科类书籍</div>
             <li>
                 1. 西窗法语
+            </li>
+
+            <div class="item">金融类书籍</div>
+            <li class="">
+                1. 有钱人都在想什么
+            </li>
+            <li>
+                2. 穷爸爸富爸爸
+            </li>
+
+            <div class="item">other what I want to read book</div>
+            <li class="">
+                1. 高效习惯
             </li>
         </ul>
         <p class="tips">tips:完成的书籍我会标记为over，并且加上一个看书过程中的笔记链接(如果有的话)</p>
